
[build-system]
requires = ["flit_core >=3.2,<4", "importlib_metadata"]
build-backend = "flit_core.buildapi"

[project]
name = "aissist"
version = "0.1.0"
description = "A simple GPT command line chat interface"
authors = [
  { name = "Craig Booth", email = "craigmbooth@gmail.com" },
]
license = { file = "LICENSE" }

readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

requires-python = ">=3.7"

dependencies = [
  "importlib_metadata<7",
  "openai<1",
  "prompt_toolkit<4",
  "pygments<3",
  "retry<1",
  "tiktoken<1",
  "tomlkit<1"
]

[project.urls]
"Homepage" = "https://github.com/craigmbooth/aissist"
"Bug Tracker" = "https://github.com/craigmbooth/aissist/issues"

[project.scripts]
ai = "aissist.aissist:main"
